--- a/docs/_posts/2022-09-06-使用Jekyll搭建博客.md
+++ b/docs/_posts/2022-09-06-使用Jekyll搭建博客.md
@@ -71,6 +71,20 @@ beautiful-jekyll写作文档（md
 
 GitHub Pages 可以用来展示一些开源项目、主持博客甚或分享个人简历等。完成站点构建后，将站点根目录推送至GitHub仓库，并设置Pages后即能展示。详见[Pages文档](https://docs.github.com/cn/pages/setting-up-a-github-pages-site-with-jekyll/creating-a-github-pages-site-with-jekyll)。
 
+### 美化
+
+- 添加背景音乐
+
+1. 音乐外链，以QQ音乐为例
+<iframe frameborder="0" border="0" marginwidth="0" marginheight="0" width=240 height=80
+src="//i.y.qq.com/n2/m/outchain/player/index.html?songid=101167817">
+</iframe>
+2. audio元素
+<audio controls loop>
+    <source src="path_to_music" type="audio/mpeg">
+    Your browser does not support this audio format.
+</audio>
+
 ### 参考
 [GitHub Pages指南](https://docs.github.com/cn/pages/quickstart)  
 [Jekyll官网](https://jekyllrb.com/)  
