--- a/docs/_posts/2022-09-27-edgeR.md
+++ b/docs/_posts/2022-09-27-edgeR.md
@@ -4,7 +4,7 @@ title: 使用edgeR做差异分析
 tags: [RNA-seq, toolkits]
 ---
 
-**edgeR** is a package for the differential expression analysis of digital gene expression data, that is, of count data arising from DNA sequencing technologies. It is especially designed for differential expression analyses of RNA-Seq or SAGE data, or differential marking analyses of ChIP-Seq data.  
+[edgeR](https://bioconductor.org/packages/release/bioc/html/edgeR.html) is a package for the differential expression analysis of digital gene expression data, that is, of count data arising from DNA sequencing technologies. It is especially designed for differential expression analyses of RNA-Seq or SAGE data, or differential marking analyses of ChIP-Seq data.  
 edgeR implements novel statistical methods based on the negative binomial distribution as a model for count variability, including empirical Bayes methods, exact tests, and generalized linear models. The package is especially suitable for analysing designed experiments with multiple experimental factors but possibly small numbers of replicates. It has unique abilities to model transcript specific variation even in small samples, a capability essential for prioritizing genes or transcripts that have consistent effects across replicates.
 
 ```R
@@ -43,7 +43,7 @@ y <- estimateDisp(y,design)
 #et <- exactTest(y)
 #res <- topTags(et,n=30000)$table
 #
-## 6.2 quasi-likelihood (QL) F-test
+## 6.2 quasi-likelihood (QL) F-test，此方法较likelihood ratio test更未严格
 #fit <- glmQLFit(y,design)
 #qlf <- glmQLFTest(fit,coef=2)
 #res <- topTags(qlf,n=30000)$table
@@ -91,7 +91,10 @@ ggsave("vocalno.jpg", width = 10, height = 8, dpi = 1200, units = "cm")
 
 
 ## 没有设置重复的数据的分析
-#Simply pick a reasonable dispersion value, based on your experience with similar data, and use that for exactTest or glmFit. Typical values for the common BCV (square-root dispersion) for datasets arising from well-controlled experiments are 0.4 for human data, 0.1 for data on genetically identical model organisms or 0.01 for technical replicates.
+#Simply pick a reasonable dispersion value, based on your experience with similar data, 
+#and use that for exactTest or glmFit. Typical values for the common BCV (square-root 
+#dispersion) for datasets arising from well-controlled experiments are 0.4 for human data, 
+#0.1 for data on genetically identical model organisms or 0.01 for technical replicates.
 bcv <- 0.2
 counts <- matrix( rnbinom(40,size=1/bcv^2,mu=10), 20,2)
 y <- DGEList(counts=counts, group=1:2)
