correct some mistakes in the previous posts

--- a/docs/_posts/2022-09-28-STAR.md
+++ b/docs/_posts/2022-09-28-STAR.md
@@ -42,11 +42,11 @@ STAR \
 --outFileNamePrefix /path/to/outputdir/prefix
 ```
 
-**其他参数说明**（对于可用参数，及使用|分隔的选项，推荐使用第一个）：  
+**其他参数说明**（对于多个可用参数的情况，即用\|分隔的选项，推荐使用第一个）：  
 
 1、输入文件  
---readFilesIn Read1 \[Read2\]，对于多个样本，--readFilesIn s1read1.fq,s2read1.fq s1read2.fq,s2read2.fq；  
---readFilesCommand -，当reads文件是压缩文件是使用，如--readFilesCommand zcat, --readFilesCommand gunzip -c, --readFilesCommand bunzip2 -c；  
+--readFilesIn Read1 \[Read2\]，对于多个样本，写为s1read1.fq,s2read1.fq s1read2.fq,s2read2.fq；  
+--readFilesCommand Options，当reads文件是压缩文件是使用，Options可设置为zcat, gunzip -c, bunzip2 -c；  
 --readFilesType Fastx|SAM SE|SAM PE，数据类型；  
 --clip5pNbases N，默认N=0，比对时跳过reads 5'端N bp的碱基
 
@@ -63,7 +63,7 @@ STAR \
 --chimOutType WithinBAM|SeparateSAMold，chimeric (fusion) 转录本的输出；  
 --outStd Log|BAM_Unsorted，标准输出内容
 
-4、ENCODE分析流程的参数设置
+4、ENCODE分析流程的参数设置  
 --outFilterType BySJout  
 --outFilterMultimapNmax 20  
 --alignSJoverhangMin 8  
@@ -76,4 +76,3 @@ STAR \
 
 **Ref**：  
 [STAR: ultrafast universal RNA-seq aligner. 2012](https://academic.oup.com/bioinformatics/article/29/1/15/272537)
-
